# devex-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pnpm-lock.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  integration-pipeline.yml  release.yml
.kiro/specs/dora-telemetry-consistency/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: adr.md
tools/devex-cli/: .gitignore  README.md  pyproject.toml
tools/devex-cli/src/devex/: __init__.py  main.py
tools/devex-cli/src/devex/commands/: branch.py  dora.py  init.py  standards.py
tools/devex-cli/src/devex/dora/: collector.py
tools/devex-cli/src/devex/hooks/: installer.py
tools/devex-cli/src/devex/validators/: branch.py  commit.py  work_id.py
tools/devex-cli/tests/: test_branch_command.py  test_pbt_validators.py  test_standards_check.py  test_work_id_validator.py
