[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devex"
version = "0.1.0"
description = "DevEx Platform CLI — Golden Path for engineering teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "boto3>=1.34",
]

[project.scripts]
devex = "devex.main:app"


[tool.hatch.build.targets.wheel]
packages = ["src/devex"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B008", # do not perform function calls in default arguments (typer requires this)
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
